[UX-493] fix more layout issues with the header / pipeline result

--- a/less/theme.less
+++ b/less/theme.less
@@ -714,6 +714,7 @@ footer {
 .dialog {
   width: 100%;
   height: 100%;
+  min-width: 640px; // avoid flow issues when resizing dialogs very small
   position: fixed;
   top: 0;
   left: 0;
@@ -726,15 +727,17 @@ footer {
 }
 
 .dialog .header {
-  padding: 25px 50px 0 50px;
   color: #ffffff;
   font-weight: normal;
   line-height: 20px;
   font-size: 1.6rem;
 }
 
+.dialog .header-content {
+  padding: 25px 50px 0 50px;
+}
+
 .dialog .header .page-tabs {
-  clear: both;
   font-size: 1.5rem;
 
   a {
